[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path= "src/lib.rs"


# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path="src/main.rs"
name = "zero2prod"

[dependencies]
actix-web= "4"
tokio= { version= "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.12.12"
serde = { version= "1", features = ["derive"]}
rustls = "0.23.20"
config = "0.15.5"
uuid= { version= "1", features = ["v4"] }
chrono = { version= "0.4.22", default-features = false, features = ["clock"] }
env_logger = "0.11.5"
log = "0.4.20"
tracing= { version= "0.1", features = ["log"] }
tracing-subscriber= { version= "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter= "0.3"
tracing-log= "0.2"
secrecy = { version= "0.7.0", features = ["serde"] }
# Dev dependencies are used exclusively when running tests or examples
# They do not get included in the final application binary!
[dev-dependencies]
reqwest = "0.12"


[dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate"]
